<resources>
    <string name="app_name">CRUDFirebase</string>
    <string name="login">Login</string>
    <string name="nim_baru">NIM Baru</string>
    <string name="nama_baru">Nama Baru</string>
    <string name="jurusan_baru">Jurusan Baru</string>
    <string name="update">Update</string>
    <string name="simpan">Simpan</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="logout">Logout</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
</resources>