<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="NIM"
            android:inputType="number" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Masukan Nama"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Jurusan"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tempat Tanggal Lahir"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Alamat"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/agama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Agama"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/no_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No HP"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/laki_laki" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/simpan"
                    app:icon="@drawable/ic_baseline_save_24"
                    app:iconGravity="textStart" />

                <Button
                    android:id="@+id/showdata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/lihat_data"
                    app:icon="@drawable/ic_baseline_view_list_24"
                    app:iconGravity="textStart" />

            </LinearLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/logout"
                app:icon="@drawable/ic_baseline_login_24"
                app:iconGravity="textStart" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>